--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ title: pablo talavante
 description: This is my personal porfolio. Here you will find my creations, mostly made with a computer.
 googlewebfonts: Fira+Code:wght@400;500;700
 twitter:
-  username: @pablotalavante
+  username: pablotalavante
   card: summary
   creator: #yourusername
 author:
-  twitter: @pablotalavante
+  twitter: pablotalavante
   name: pablo talvante
   avatar:
   email: #youremail
