--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 site: pablo talavante
 url: pablotalavante.github.io
 title: pablo talavante
-description: This is my personal porfolio. Here you will find my creations, mostly made with a computer.
+description: This is my personal porfolio. Here you will find my creations, most of them made with a computer.
 googlewebfonts: Fira+Code:wght@400;500;700
 twitter:
   username: pablotalavante
