--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 site: pablo talavante
-url: pablotalavante.github.io
+url: http://pablotalavante.github.io
 title: pablo talavante
 description: This is my personal porfolio. Here you will find my creations, most of them made with a computer.
 googlewebfonts: Fira+Code:wght@400;500;700
